--- a/index.html
+++ b/index.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GYM</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <nav>
+    <div class="menu-container">
+        <div class="logo">
+            <h1>Fitness Power</h1>
+        </div>
+        <div class="menu-items">
+            <li>Home</li>
+            <li>About</li>
+            <li>Services</li>
+            <li>Contacts</li>
+        </div>
+    </div>
+   </nav>
+   <div class="banner-container">
+        <div class="banner-left">
+            <div class="banner-description">
+                <p class="banner-text">
+                    Lorem ipsum dolor sit amet.
+                </p>
+                <h1 class="title1">A Reason of Your Health Join Today</h1>
+                <p class="text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia <br> eum voluptatem fugiat nemo illum unde.</p>
+                <br>
+                <button class="banner-btn">Learn More...</button>
+            </div>
+        </div>
+        <div class="banner-right">
+            <img src="images/home-bg.png" alt="">
+        </div>
+   </div>
+<section>
+    <div class="card1">
+        <div class="card-description">
+            <img src="" alt="">
+        </div>
+    </div>
+    <div class="card2">
+
+    </div>
+    <div class="card3">
+
+    </div>
+</section>
 </body>
 </html>
