--- a/index.html
+++ b/index.html
@@ -34,21 +34,34 @@
             </div>
         </div>
         <div class="banner-right">
-            <img src="images/home-bg.png" alt="">
-        </div>
-   </div>
-<section>
-    <div class="card1">
-        <div class="card-description">
-            <img src="" alt="">
+            <img class="gym-icon" src="images/home-bg.png" alt="">
         </div>
     </div>
-    <div class="card2">
-
+    <h1 class="title-2">Take a Look</h1>
+    <div class="section2">
+        <div class="card1">
+            <div class="card-description">
+                <img class="gym-icon" src="images/package/icon1.png" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio eum possimus accusantium voluptatem, saepe aliquid! Aspernatur blanditiis nisi culpa quisquam.</p>
+                <a href="">More...</a>
+            </div>
+        </div>
+            <div class="card1">
+                <div class="card-description">
+                    <img class="gym-icon" src="images/package/icon1.png" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio eum possimus accusantium voluptatem, saepe aliquid! Aspernatur blanditiis nisi culpa quisquam.</p>
+                    <a href="">More...</a>
+                </div>
+            </div>
+                <div class="card1">
+                    <div class="card-description">
+                        <img class="gym-icon" src="images/package/icon1.png" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio eum possimus accusantium voluptatem, saepe aliquid! Aspernatur blanditiis nisi culpa quisquam.</p>
+                        <a href="">More...</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="card3">
-
-    </div>
-</section>
 </body>
 </html>
